added stupid babel to this

--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -16,7 +16,8 @@
   white-space: pre-wrap;
 "></div>
 <div id="container"></div>
-
+<script src="node_modules/react/dist/react.min.js"></script>
+<script src="node_modules/react-dom/dist/react-dom.min.js"></script>
 <script src="TicTacToe.js"></script>
 <script>
     window.addEventListener('mousedown', function(e) {
