--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -18,7 +18,8 @@
 <div id="container"></div>
 <script src="node_modules/react/dist/react.min.js"></script>
 <script src="node_modules/react-dom/dist/react-dom.min.js"></script>
-<script src="TicTacToe.js"></script>
+<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+<script type="text/babel" src="TicTacToe.js"></script>
 <script>
     window.addEventListener('mousedown', function(e) {
         document.body.classList.add('mouse-navigation');
