starting with basics

--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -16,8 +16,8 @@
   white-space: pre-wrap;
 "></div>
 <div id="container"></div>
-<script src="node_modules/react/dist/react.min.js"></script>
-<script src="node_modules/react-dom/dist/react-dom.min.js"></script>
+<script src="node_modules/react/dist/react.js"></script>
+<script src="node_modules/react-dom/dist/react-dom.js"></script>
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 <script type="text/babel" src="TicTacToe.js"></script>
 <script>
